gcc/testsuite/gm2/iso/fail/testarrayunbounded2.mod
MODULE testarrayunbounded2 ;


PROCEDURE foo (a: ARRAY OF ARRAY OF CARDINAL) ;
BEGIN

END foo ;


VAR
   b: ARRAY [0..10] OF CARDINAL ;
BEGIN
   foo (b)
END testarrayunbounded2.
